style: handled warnings, removed unused variables,